# device_vector

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD  build.sh
configs/: test_geometry.nml  test_reorder.nml  test_rk4.nml
profile/: profile_kernel.F90  profile_memaccess.F90  profile_reorder.F90  profile_resize.F90  profile_resize_dumping.F90  profile_rk4_interp.F90
src/: CUDA.mk  DeviceComm.cu  DeviceEnv.cuh  DevicePtrManager.cu  DevicePtrManager.cuh  DeviceVector.cuh  Device_Constant.cuh  Device_Interface.F90  Device_Interface_Openacc.F90  acc_interop.cpp  acc_interop.h  c_interface.cu
src/cuda/: DeviceEnv.cu  c_interface.cu
src/fortran/: Device_Interface.F90  Device_Interface_Openacc.F90
src/include/: DeviceComm.cuh  DeviceEnv.cuh  DevicePtrManager.cuh  DeviceVector.cuh  Device_Kernels.cuh  Device_Lib.cuh  acc_interop.h
src/openacc/: acc_interop.cpp
src/particle/: cross_ckeck_logic.F90  cross_ckeck_logic.inc  particle_init.F90  particle_init.inc  physics_mod.F90  ppmain.F90  ppmain.inc  precision_mod.F90  rand.F90  rand.inc  rand.int  rk4.inc
tests/: DeviceVector_StressTest.cu  DeviceVector_Test.cu  Test_Suite.F90  Test_acc_map.F90  test_Alignment.cu  test_Async.cu  test_Capacity.cu  test_Error.cu  test_Lifecycle.cu  test_reorder_preview.F90  test_rk1_dv.F90  test_rk4_dv.F90  test_rk4_kinaco.F90
